--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <p>Hello, world!</p>
-
+<img src="https://www.biography.com/.image/c_fill%2Ccs_srgb%2Cfl_progressive%2Ch_400%2Cq_auto:good%2Cw_620/MTE1ODA0OTcxNzgzMzkwNzMz/william-shakespeare-194895-1-402.jpg" alt="William">
 <p>
-William Shakespeare's <em>Sonnets</em> consists of 154 poems, each fourteen lines long (three
+William Shakespeare's <em>Sonnets</em> consists of 154 poems,<br>each fourteen lines long (three
 <a href="https://en.wikipedia.org/wiki/Quatrain">quatrains</a>
 followed by a rhyming
 <a href="https://en.wikipedia.org/wiki/Couplet">couplet</a>).
